Add create job.

--- a/WebApplicationJobs/Pages/Users/Index.cshtml
+++ b/WebApplicationJobs/Pages/Users/Index.cshtml
@@ -28,5 +28,5 @@
             }
         </tbody>
     </table>
-    <a class="btn btn-primary" asp-page="./Create">Adicionar User</a> <!-- Botão para adicionar um novo usuário -->
+    <a class="btn btn-primary" asp-page="./Create">Adicionar User</a>
 }
